# Snake

./: CMakeLists.txt  README.md  game.cpp  game.hpp  snake.cpp  snake.hpp
res/: snake.desktop
src/: game.cpp  game.hpp  main.cpp  snake.cpp  snake.hpp
